tests/language/variable/duplicate_field_with_initializer_test.dart
// Copyright (c) 2018, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

class Repeated {
  dynamic a = '', b = 'Something';
  dynamic b;
  //      ^
  // [analyzer] COMPILE_TIME_ERROR.DUPLICATE_DEFINITION
  // [cfe] 'b' is already declared in this scope.
}

main() {}
